; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_chars.c_mchars_spec2str.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_chars.c_mchars_spec2str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ln = type { i8* }

@mchars = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mchars_spec2str(i8* %0, i64 %1, i64* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.ln*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = getelementptr inbounds i8, i8* %10, i64 %11
  store i8* %12, i8** %9, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @ohash_qlookupi(i32* @mchars, i8* %13, i8** %9)
  %15 = call %struct.ln* @ohash_find(i32* @mchars, i32 %14)
  store %struct.ln* %15, %struct.ln** %8, align 8
  %16 = load %struct.ln*, %struct.ln** %8, align 8
  %17 = icmp eq %struct.ln* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %28

19:                                               ; preds = %3
  %20 = load %struct.ln*, %struct.ln** %8, align 8
  %21 = getelementptr inbounds %struct.ln, %struct.ln* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  %23 = call i64 @strlen(i8* %22)
  %24 = load i64*, i64** %7, align 8
  store i64 %23, i64* %24, align 8
  %25 = load %struct.ln*, %struct.ln** %8, align 8
  %26 = getelementptr inbounds %struct.ln, %struct.ln* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  store i8* %27, i8** %4, align 8
  br label %28

28:                                               ; preds = %19, %18
  %29 = load i8*, i8** %4, align 8
  ret i8* %29
}

declare dso_local %struct.ln* @ohash_find(i32*, i32) #1

declare dso_local i32 @ohash_qlookupi(i32*, i8*, i8**) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
